@@ -3,7 +3,8 @@ NSD RELEASE NOTES
 3.2.3 (UPCOMING RELEASE)
 =============
 BUG FIXES:
-	- Bugfix #249.
+	- Bugfix #236: Allow RRs before the SOA in a zonefile.
+	- Bugfix #249: Don't put NS RRs in a response with QTYPE=DNSKEY.
 	- Bugfix: install hickup.
 	- Fix to use 4096 EDNS limit for IPv6 on Linux.
 
