@@ -1,3 +1,6 @@
+13 July 2009: Matthijs
+	- Bug 236: allow RRs before the SOA RR.
+
 29 June 2009: Wouter
 	- patch for use of Linux IPV6_MTU option, so that on linux the default
 	  EDNS UDP size advertised becomes 4096 over IPv6.  It fragments the
